Updated to use more efficient creation for Integer/Long Updated Facet hit comparator to implement Serializable